tests/integration/custom_resources/ec2/egress_only_internet_gateway_single_resource.json
{
    "service": "ec2",
    "mockData": {
        "describe_egress_only_internet_gateways.return_value": {
            "EgressOnlyInternetGateways": [
                {
                    "Attachments": [
                        {
                            "State": "attached",
                            "VpcId": "vpc-11111111"
                        }
                    ],
                    "EgressOnlyInternetGatewayId": "eigw-11111111111111111",
                    "Tags": [
                        {
                            "Key": "Name",
                            "Value": "test-eigw"
                        }
                    ]
                }
            ]
        }
    },
    "getResource": {
        "urn": "urn:aws:123456789012:eu-west-2:ec2:egress_only_internet_gateway:eigw-11111111111111111"
    },
    "expectedResults": [
        {
            "attachments": [
                {
                    "State": "attached",
                    "VpcId": "vpc-11111111"
                }
            ],
            "cloudwanderer_metadata": {
                "Attachments": [
                    {
                        "State": "attached",
                        "VpcId": "vpc-11111111"
                    }
                ],
                "EgressOnlyInternetGatewayId": "eigw-11111111111111111",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "test-eigw"
                    }
                ]
            },
            "dependent_resource_urns": [],
            "egress_only_internet_gateway_id": "eigw-11111111111111111",
            "parent_urn": null,
            "relationships": [],
            "tags": [
                {
                    "Key": "Name",
                    "Value": "test-eigw"
                }
            ]
        }
    ]
}
