tests/integration/custom_resources/ec2/vpc_endpoint_multiple_resources.json
{
    "service": "ec2",
    "mockData": {
        "get_paginator.return_value.paginate.return_value": [
            {
                "VpcEndpoints": [
                    {
                        "VpcEndpointId": "vpce-11111111111111111",
                        "VpcEndpointType": "Interface",
                        "VpcId": "vpc-11111111",
                        "ServiceName": "com.amazonaws.eu-west-1.s3",
                        "State": "pending",
                        "PolicyDocument": "{\\n    \"Statement\": [\\n        {\\n            \"Action\": \"*\",\\n            \"Effect\": \"Allow\",\\n            \"Resource\": \"*\",\\n            \"Principal\": \"*\"\\n        }\\n    ]\\n}",
                        "RouteTableIds": [],
                        "SubnetIds": [
                            "subnet-11111111",
                            "subnet-22222222",
                            "subnet-33333333"
                        ],
                        "Groups": [
                            {
                                "GroupId": "sg-11111111",
                                "GroupName": "default"
                            }
                        ],
                        "PrivateDnsEnabled": false,
                        "RequesterManaged": false,
                        "NetworkInterfaceIds": [
                            "eni-11111111111111111",
                            "eni-22222222222222222",
                            "eni-33333333333333333"
                        ],
                        "DnsEntries": [
                            {
                                "DnsName": "*.vpce-11111111111111111-11111111.s3.eu-west-1.vpce.amazonaws.com",
                                "HostedZoneId": "11111111111111"
                            },
                            {
                                "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1b.s3.eu-west-1.vpce.amazonaws.com",
                                "HostedZoneId": "11111111111111"
                            },
                            {
                                "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1c.s3.eu-west-1.vpce.amazonaws.com",
                                "HostedZoneId": "11111111111111"
                            },
                            {
                                "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1a.s3.eu-west-1.vpce.amazonaws.com",
                                "HostedZoneId": "11111111111111"
                            }
                        ],
                        "CreationTimestamp": "2021-04-11T09:46:00.672Z",
                        "Tags": [],
                        "OwnerId": "111111111111"
                    }
                ]
            }
        ]
    },
    "getResources": {
        "serviceName": "ec2",
        "resourceType": "vpc_endpoint",
        "region": "eu-west-2"
    },
    "expectedResults": [
        {
            "urn": {
                "cloud_name": "aws",
                "account_id": {},
                "region": "eu-west-2",
                "service": "ec2",
                "resource_type": "vpc_endpoint",
                "resource_id_parts": [
                    "vpce-11111111111111111"
                ],
                "resource_id": "vpce-11111111111111111"
            },
            "relationships": [],
            "dependent_resource_urns": [],
            "parent_urn": null,
            "cloudwanderer_metadata": {
                "VpcEndpointId": "vpce-11111111111111111",
                "VpcEndpointType": "Interface",
                "VpcId": "vpc-11111111",
                "ServiceName": "com.amazonaws.eu-west-1.s3",
                "State": "pending",
                "PolicyDocument": "{\\n    \"Statement\": [\\n        {\\n            \"Action\": \"*\",\\n            \"Effect\": \"Allow\",\\n            \"Resource\": \"*\",\\n            \"Principal\": \"*\"\\n        }\\n    ]\\n}",
                "RouteTableIds": [],
                "SubnetIds": [
                    "subnet-11111111",
                    "subnet-22222222",
                    "subnet-33333333"
                ],
                "Groups": [
                    {
                        "GroupId": "sg-11111111",
                        "GroupName": "default"
                    }
                ],
                "PrivateDnsEnabled": false,
                "RequesterManaged": false,
                "NetworkInterfaceIds": [
                    "eni-11111111111111111",
                    "eni-22222222222222222",
                    "eni-33333333333333333"
                ],
                "DnsEntries": [
                    {
                        "DnsName": "*.vpce-11111111111111111-11111111.s3.eu-west-1.vpce.amazonaws.com",
                        "HostedZoneId": "11111111111111"
                    },
                    {
                        "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1b.s3.eu-west-1.vpce.amazonaws.com",
                        "HostedZoneId": "11111111111111"
                    },
                    {
                        "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1c.s3.eu-west-1.vpce.amazonaws.com",
                        "HostedZoneId": "11111111111111"
                    },
                    {
                        "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1a.s3.eu-west-1.vpce.amazonaws.com",
                        "HostedZoneId": "11111111111111"
                    }
                ],
                "CreationTimestamp": "2021-04-11T09:46:00.672Z",
                "Tags": [],
                "OwnerId": "111111111111",
                "LastError": null
            },
            "vpc_endpoint_id": "vpce-11111111111111111",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-11111111",
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "pending",
            "policy_document": "{\\n    \"Statement\": [\\n        {\\n            \"Action\": \"*\",\\n            \"Effect\": \"Allow\",\\n            \"Resource\": \"*\",\\n            \"Principal\": \"*\"\\n        }\\n    ]\\n}",
            "route_table_ids": [],
            "subnet_ids": [
                "subnet-11111111",
                "subnet-22222222",
                "subnet-33333333"
            ],
            "groups": [
                {
                    "GroupId": "sg-11111111",
                    "GroupName": "default"
                }
            ],
            "private_dns_enabled": false,
            "requester_managed": false,
            "network_interface_ids": [
                "eni-11111111111111111",
                "eni-22222222222222222",
                "eni-33333333333333333"
            ],
            "dns_entries": [
                {
                    "DnsName": "*.vpce-11111111111111111-11111111.s3.eu-west-1.vpce.amazonaws.com",
                    "HostedZoneId": "11111111111111"
                },
                {
                    "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1b.s3.eu-west-1.vpce.amazonaws.com",
                    "HostedZoneId": "11111111111111"
                },
                {
                    "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1c.s3.eu-west-1.vpce.amazonaws.com",
                    "HostedZoneId": "11111111111111"
                },
                {
                    "DnsName": "*.vpce-11111111111111111-11111111-eu-west-1a.s3.eu-west-1.vpce.amazonaws.com",
                    "HostedZoneId": "11111111111111"
                }
            ],
            "creation_timestamp": "2021-04-11T09:46:00.672Z",
            "tags": [],
            "owner_id": "111111111111",
            "last_error": null
        }
    ]
}
