tests/integration/custom_resources/ec2/vpn_gateway_multiple_resources.json
{
    "service": "ec2",
    "mockData": {
        "get_paginator.return_value.paginate.return_value": [
            {
                "VpnGateways": [
                    {
                        "State": "available",
                        "Type": "ipsec.1",
                        "VpcAttachments": [],
                        "VpnGatewayId": "vgw-11111111111111111",
                        "AmazonSideAsn": 64512,
                        "Tags": [
                            {
                                "Key": "Name",
                                "Value": "test-vpn-gateway"
                            }
                        ]
                    }
                ]
            }
        ]
    },
    "getResources": {
        "serviceName": "ec2",
        "resourceType": "vpn_gateway",
        "region": "eu-west-2"
    },
    "expectedResults": [
        {
            "urn": {
                "cloud_name": "aws",
                "account_id": {},
                "region": "eu-west-2",
                "service": "ec2",
                "resource_type": "vpn_gateway",
                "resource_id_parts": [
                    "vgw-11111111111111111"
                ],
                "resource_id": "vgw-11111111111111111"
            },
            "relationships": [],
            "dependent_resource_urns": [],
            "parent_urn": null,
            "cloudwanderer_metadata": {
                "AvailabilityZone": null,
                "State": "available",
                "Type": "ipsec.1",
                "VpcAttachments": [],
                "VpnGatewayId": "vgw-11111111111111111",
                "AmazonSideAsn": 64512,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "test-vpn-gateway"
                    }
                ]
            },
            "availability_zone": null,
            "state": "available",
            "type": "ipsec.1",
            "vpc_attachments": [],
            "vpn_gateway_id": "vgw-11111111111111111",
            "amazon_side_asn": 64512,
            "tags": [
                {
                    "Key": "Name",
                    "Value": "test-vpn-gateway"
                }
            ]
        }
    ]
}
