tests/integration/custom_resources/ec2/vpn_gateway_single_resource.json
{
    "service": "ec2",
    "mockData": {
        "describe_vpn_gateways.return_value": {
            "VpnGateways": [
                {
                    "State": "available",
                    "Type": "ipsec.1",
                    "VpcAttachments": [],
                    "VpnGatewayId": "vgw-11111111111111111",
                    "AmazonSideAsn": 64512,
                    "Tags": [
                        {
                            "Key": "Name",
                            "Value": "test-vpn-gateway"
                        }
                    ]
                }
            ]
        }
    },
    "getResource": {
        "urn": "urn:aws:123456789012:eu-west-2:ec2:vpn_gateway:vgw-11111111111111111"
    },
    "expectedResults": [
        {
            "amazon_side_asn": 64512,
            "cloudwanderer_metadata": {
                "AmazonSideAsn": 64512,
                "State": "available",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "test-vpn-gateway"
                    }
                ],
                "Type": "ipsec.1",
                "VpcAttachments": [],
                "VpnGatewayId": "vgw-11111111111111111"
            },
            "dependent_resource_urns": [],
            "parent_urn": null,
            "relationships": [],
            "state": "available",
            "tags": [
                {
                    "Key": "Name",
                    "Value": "test-vpn-gateway"
                }
            ],
            "type": "ipsec.1",
            "urn": {
                "account_id": {},
                "cloud_name": "aws",
                "region": {},
                "resource_id": "vgw-11111111111111111",
                "resource_id_parts": [
                    "vgw-11111111111111111"
                ],
                "resource_type": "vpn_gateway",
                "service": "ec2"
            },
            "vpc_attachments": [],
            "vpn_gateway_id": "vgw-11111111111111111"
        }
    ]
}
